# AIOHAI

./: .gitignore  CHANGELOG_4.0.0.md  README.md  pyproject.toml  requirements.txt
aiohai/: __init__.py  __main__.py  aiohai_init.py
aiohai/agent/: __init__.py  browser_supervisor.py  screen_capture.py  trust_manager.py  vault_accessor.py
aiohai/core/: __init__.py  config.py  config_manager.py  constants.py  core_init.py  patterns.py  templates.py  types.py  (+1 more)
changelogs/: CHANGELOG_5.0.0.md  CHANGELOG_5.1.0.md  CHANGELOG_5.3.0.md  CHANGELOG_5.4.0.md  CHANGELOG_6.0.0.md
config/: config.json
desktop/: FIRST_RUN_GUIDE.md  launch-hidden.vbs  package-lock.json  package.json  start-aiohai.bat  stop-aiohai.bat  tsconfig.main.json  tsconfig.renderer.json
docs/: AIOHAI_Extraction_Progress_P4.md  ARCHITECTURE.md
policy/: aiohai_security_policy_v3.0.md  ha_framework_v3.md  office_framework_v3.md
proxy/: aiohai_proxy.py
security/: __init__.py  fido2_approval.py  hsm_integration.py  security_components.py
setup/: Setup.ps1
tests/: conftest.py  run_audit_tests.py  test_audit_remediation.py  test_audit_structural.py  test_audit_v600.py  test_e2e.py  test_extraction_verify_p4.py  test_extraction_verify_p5.py  test_extraction_verify_p7.py  test_ha_framework.py  test_office_framework.py  test_security.py  test_startup.py  test_taxonomy_v3_phase1.py  test_taxonomy_v3_phase1b.py  test_taxonomy_v3_phase2.py  test_taxonomy_v3_phase3.py  test_taxonomy_v3_phase4.py  test_v510_optimization.py
tools/: aiohai_cli.py  hsm_setup.py  register_devices.py
web/: __init__.py
(+93 files in other folders)
